public/css/style.css
@font-face {
  font-family: 'Dancing Script';
  src : url('/fonts/DancingScript-Regular.ttf');
}
body{
  background: #060210;
}
.app-title{
  width:100%;
  background: black;
  text-align: left;
  padding-left: 80px;
  color: white;
  opacity: 0.9;
  font-family: 'Dancing Script', cursive;
  font-size: 50px;
  margin-top: 0px;
}
.flex-container::before{
  content: "";
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;

  display: block;
  background-image: url('/img/bridge.jpeg');
  background-size:cover;
  width: 100%;
  height: 100%;

  -webkit-filter: blur(5px);
  -moz-filter: blur(5px);
  -o-filter: blur(5px);
  -ms-filter: blur(5px);
  filter: blur(5px);
}

.flex-container{
  display: flex;
  width: 70%;
  margin: auto;
  min-height: 560px;
  overflow: auto;
  position: relative;
}
.mainchat{
  flex-grow: 6;
  min-width: 100px;
  padding: 20px;
  background: #787C84;
  position: relative;
  opacity: 0.7;
}
.aside{
  flex-grow: 2.5;
  min-width: 50px;
  background: #3B3648;
  opacity: 0.6;
}
.aside header{
  text-align: center;
}
.aside header h2{
  color:white;
}
.aside main ul{
  list-style-type: none;
  color: white;
  padding: 0;
  margin: 0;
}
.aside main ul li{
  background: #060210;
  height: 30px;
  padding-top:8px;
  margin-top: 3px;
  cursor: pointer;
}
.aside main ul li:hover{
  background: #36275F;
  border-left: 1px solid white;
  border-right: 1px solid white;
}
#messages {
  color: white;
  list-style-type: none;
}
#messages li{
  width: 250px;
  background: black;
  padding: 5px;
  margin-top: 5px;
  border: 1px solid black;
}
.mainchat footer{
  position: absolute;
  bottom: 0px;
  right: 0px;
  left: 0px;
  background: #B7A9DF;
  min-height: 50px;
}
#message-form input{
  min-height: 50px;
  width: 80%;
}
#message-form button{
  height: 50px;
}

